syntax = "proto3";

package  echotell;

service Teller{

    rpc TellResponse(UserRequest) returns (stream UserResponse);
}

message UserRequest {
 string Name=1;
 int32 Age=2;
}

message UserResponse {
   string Body = 1;
}
